@@ -27,6 +27,9 @@ sections.
 
 Progress operation text is now resizable.
 
+Fixed bug that would not update VM display when a VM's custom icon
+was changed. 
+
 -------------------------------------
 	4.2-6	2013-07-22
 -------------------------------------
